--- a/templates/medlemskapresultater/partials/style.hbs
+++ b/templates/medlemskapresultater/partials/style.hbs
@@ -45,6 +45,12 @@
         font-weight: bold;
     }
 
+    .p3 {
+        font-style: italic;
+        margin-bottom: 40px;
+        text-align: right;
+    }
+
     #footer {
         position: running(footer);
         font-size: 12px;
@@ -71,7 +77,7 @@
 
     #header {
         background: #C2EAF7;
-        padding: 0cm 0.7cm;
+        padding: 0.3cm 0.7cm;
     }
 
     h3 {
