endret fra navn til fnr

--- a/templates/medlemskapresultater/partials/base.hbs
+++ b/templates/medlemskapresultater/partials/base.hbs
@@ -46,7 +46,7 @@
     <dt><b>-</b> Utlendingsdirektoratet </dt>
     {{/eq}}
     <dt><b>-</b> Søknaden om sykepenger, spørsmål om arbeid utenfor Norge</dt>
-    <dl>Vurderingen forutsetter at {{ navn }} ikke:</dl>
+    <dl>Vurderingen forutsetter at {{ fnr }} ikke:</dl>
 
     <dt><b>-</b> har utført noe arbeid utenfor Norge de siste 12 månedene</dt>
 
