--- a/templates/medlemskapresultater/partials/base.hbs
+++ b/templates/medlemskapresultater/partials/base.hbs
@@ -32,8 +32,8 @@
         offentleglova § 13 første ledd<br />
 
         og NAV-loven § 7 </p>
-    <p><b>Resultatet av den automatiske vurderingen av medlemskapet er at {{ navn }} er medlem i folketrygden pr {{ fom }}. </b></p>
-    <dl>Den automatiske vurderingen er basert på opplysninger om {{ navn }} fra:</dl>
+    <p><b>Resultatet av den automatiske vurderingen av medlemskapet er at du er medlem i folketrygden pr {{ fom }}. </b></p>
+    <dl>Den automatiske vurderingen er basert på opplysninger om deg fra:</dl>
 
     <dt><b>-</b> NAVs medlemskapsregister MEDL</dt>
 
@@ -50,7 +50,7 @@
 
     <dt><b>-</b> har utført noe arbeid utenfor Norge de siste 12 månedene</dt>
 
-    <dt><b>-</b> er tjenestemann og ansatt i en forvaltning i et annet EØS-land, og for denne forvaltningen utfører arbeid i Norge</dt>
+    <dt><b>-</b> er tjenestemann og ansatt i en forvaltning i et annet EØS-land.</dt>
 
     <dt><b>-</b> mottar kontantytelser fra et annet EØS-land som faller inn under trygdeforordning (EF) 883/2004 artikkel 11 nr. 2</dt>
     {{#eq erNorskStatsborger "False"}}
