--- a/templates/medlemskapresultater/medlemskapvurdert.hbs
+++ b/templates/medlemskapresultater/medlemskapvurdert.hbs
@@ -1,4 +1,4 @@
 {{#> medlemskapresultater/partials/base }}
     {{#*inline "doctitle"}}Bruker er medlem i folketrygden. Automatisk vurdering gjort i forbindelse med krav om sykepenger for perioden {{ fom }} - {{ tom }} {{/inline}}
-    {{#*inline "title"}}Medlemskapet til {{ navn }} i folketrygden er automatisk vurdert i forbindelse med krav om sykepenger av {{ fom }} - {{ tom }} {{/inline}}
+    {{#*inline "title"}} Notat opprettet automatisk {{ opprettet }} til bruk i saken som gjelder søknad om sykepenger {{ fom }} - {{ tom }} {{/inline}}
 {{/medlemskapresultater/partials/base}}
