--- a/templates/medlemskapresultater/partials/style.hbs
+++ b/templates/medlemskapresultater/partials/style.hbs
@@ -47,6 +47,7 @@
 
     .p3 {
         font-style: italic;
+        margin-top: -25px;
         margin-bottom: 40px;
         text-align: right;
     }
@@ -76,7 +77,7 @@
     }
 
     #header {
-        background: #C2EAF7;
+        background: #FFFFFF;
         padding: 0.3cm 0.7cm;
     }
 
@@ -91,15 +92,15 @@
 
     .title {
         display: inline-block;
-        position: absolute;
         top: 12px;
         left: 100px;
     }
 
     .navlogo {
+        position : absolute
         display: inline-block;
         padding-top: 15px;
-        padding-bottom: 12px;
+        padding-bottom: 0px;
         margin-left: 3px;
         width: 48px;
     }
