ny layout på siden, samt støtte for windows ved kjøring lokalt

--- a/templates/medlemskapresultater/medlemskapvurdert.hbs
+++ b/templates/medlemskapresultater/medlemskapvurdert.hbs
@@ -1,4 +1,4 @@
 {{#> medlemskapresultater/partials/base }}
     {{#*inline "doctitle"}}Bruker er medlem i folketrygden. Automatisk vurdering gjort i forbindelse med krav om sykepenger for perioden {{ fom }} - {{ tom }} {{/inline}}
-    {{#*inline "title"}} Notat opprettet automatisk {{ opprettet }} til bruk i saken som gjelder søknad om sykepenger {{ fom }} - {{ tom }} {{/inline}}
+    {{#*inline "title"}} Notat opprettet automatisk {{ opprettet }}{{/inline}}
 {{/medlemskapresultater/partials/base}}
