--- a/templates/medlemskapresultater/partials/style.hbs
+++ b/templates/medlemskapresultater/partials/style.hbs
@@ -24,7 +24,7 @@
     h1 {
         font-weight: 700;
         font-style: normal;
-        font-size: 20px;
+        font-size: 16px;
         font-family: "Source Sans Pro";
     }
 
@@ -50,6 +50,33 @@
         margin-top: -25px;
         margin-bottom: 40px;
         text-align: right;
+    }
+
+    .heading {
+        font-weight: 700;
+        font-style: bold;
+        font-size: 16px;
+        font-family: "Source Sans Pro";
+
+
+    }
+    .spacious {
+           padding-top: 15px;
+           padding-bottom: 15px;
+
+
+        }
+    .oppsummering {
+            font-style: normal;
+            font-size: 12px;
+            font-family: "Source Sans Pro";
+
+        }
+    .personalia_heading{
+        font-weight: 700;
+        font-style: bold;
+        font-size: 14px;
+        font-family: "Source Sans Pro";
     }
 
     #footer {
@@ -92,8 +119,10 @@
 
     .title {
         display: inline-block;
-        top: 12px;
+        top: 14px;
         left: 100px;
+        font-family: "Source Sans Pro";
+        font-size: 16px;
     }
 
     .navlogo {
