--- a/templates/medlemskapresultater/partials/base.hbs
+++ b/templates/medlemskapresultater/partials/base.hbs
@@ -7,18 +7,19 @@
     {{/block}}
 </head>
 <body>
-<div id="header">
-<img class="navlogo" src="{{ image "Navlogo.png" }}"/>
+<div class="container">
+<div id="header"><img class="navlogo" src="{{ image "Navlogo.png" }}"/></div>
 <p class="p3">Unntatt offentlighet etter<br />
 
             offentleglova § 13 første ledd<br />
 
             og NAV-loven § 7 </p>
-
+<div class="header">
     <h1 class="heading">
     <div>{{> title }}</div>
     <div>Gjelder søknad om sykepenger {{ fom }} - {{ tom }}</div>
     </h1>
+</div>
 </div>
 <div class="container">
     <div class="personinfo">
