--- a/templates/medlemskapresultater/partials/base.hbs
+++ b/templates/medlemskapresultater/partials/base.hbs
@@ -57,7 +57,7 @@
     
     <dt><b>-</b>at du ikke har utført noe arbeid utenfor Norge de siste 12 månedene</dt>
     
-    <dt><b>-</b>at du ikke oppholder deg utenfor EØS-området uten NAV sin godkjenning av utenlandsoppholdet, se folketrygdloven paragraf 8-9 andre ledd</dt>
+    <dt><b>-</b>at du ikke oppholder deg utenfor EØS-området uten NAV sin godkjenning av utenlandsoppholdet, se folketrygdloven § 8-9 andre ledd</dt>
 
     <dt><b>-</b> at du ikke er tjenestemann og ansatt i en forvaltning i et annet EØS-land.</dt>
 
