liten endring i forkortelse

--- a/templates/medlemskapresultater/partials/base.hbs
+++ b/templates/medlemskapresultater/partials/base.hbs
@@ -37,7 +37,7 @@
             </div>
         </div>
     </div>
-    <p><h3>Du er medlem i folketrygden per {{ fom }}.</h3></p>
+    <p><h3>Du er medlem i folketrygden pr. {{ fom }}.</h3></p>
     <p><b>Vurderingen av medlemskapet ditt er behandlet automatisk.</b></p>
     <div id="oppsummering" class="oppsummering">
     <dl>Den automatiske vurderingen er basert på opplysninger om deg fra:</dl>
