Tilbakestiller forrige endring

--- a/templates/medlemskapresultater/partials/base.hbs
+++ b/templates/medlemskapresultater/partials/base.hbs
@@ -49,7 +49,7 @@
     <dt><b>-</b> Arbeidstaker- og arbeidsgiverregisteret</dt>
 
     <dt><b>-</b> Enhetsregisteret</dt>
-    {{#eq erTredjelandsborger "true"}}
+    {{#eq erTredjelandsborger "True"}}
     <dt><b>-</b> Utlendingsdirektoratet </dt>
     {{/eq}}
     <dt><b>-</b> Søknaden om sykepenger, spørsmål om arbeid utenfor Norge</dt>
@@ -62,7 +62,7 @@
     <dt><b>-</b> at du ikke er tjenestemann og ansatt i en forvaltning i et annet EØS-land.</dt>
 
     <dt><b>-</b> at du ikke mottar kontantytelser fra et annet EØS-land som faller inn under trygdeforordning (EF) 883/2004 artikkel 11 nr. 2</dt>
-    {{#eq erNorskStatsborger "false"}}
+    {{#eq erNorskStatsborger "False"}}
     <dt><b>-</b> at du ikke er ansatt for en fremmed stat eller en mellomfolkelig organisasjon </dt>
     {{/eq}}
     </div>
