ny layout på uavklart dokumente

--- a/templates/medlemskapresultater/partials/dagpenger_base.hbs
+++ b/templates/medlemskapresultater/partials/dagpenger_base.hbs
@@ -19,7 +19,6 @@
     <div>{{> title }}</div>
     </h1>
     <br/>
-    Notatet er opprettet automatisk av systemet LovMe relatert til søknad om {{ ytelse }}
 
 </div>
 </div>
@@ -29,10 +28,10 @@
             <div class="persontekst__sidetopp">
                 <div class="persontekst__personalia">
                 <b class="personalia_heading">Personopplysninger</b>
-                    <p class="navn">
-                        {{ navn }}
+                    <p>
+                        Navn : {{ navn }}
                     </p>
-                    <p class="id">
+                    <p>
                         Fødselsnummer : {{ insert_at fnr 6 }}
                     </p>
                     <p>Bruker er statsborger i {{statsborger}}</p>
@@ -40,32 +39,18 @@
             </div>
         </div>
     </div>
-    <p><h3>Til saksbehandler .</h3></p>
-    <p>Brukers lovvalg og/eller medlemskap lot seg ikke avklare automatisk. </p><br/>
-    <p>For å avklare lovvalg og/eller medlemskap, må du i tillegg til det som står nedenfor, også se hva bruker har svart i søknaden om opphold/bosted og arbeid i utlandet.  </p><br/>
+    <p><h3>Til saksbehandler</h3></p>
+
     {{#each årsaker}}
         <br/>
     <b>{{ begrunnelse }}</b>
-        <br/>{{{ beskrivelse }}}<br/>
+        <br/><div class="beskrivelse">{{{ beskrivelse }}}</div><br/>
 
     {{/each}}
 
-    <p><b>Vurderingen av medlemskapet ditt er behandlet automatisk.</b></p>
-    <div id="oppsummering" class="oppsummering">
-    <dl>Den automatiske vurderingen er basert på opplysninger om deg fra:</dl>
+    <p><i>Dette er et NAV-internt dokument, jf. forvaltningsloven § 18a første ledd første setning</i></p>
+    <p><i>Notatet er opprettet automatisk av systemet LovMe relatert til søknad om {{ytelse}} </i></p>
 
-    <dt><b>-</b> NAVs medlemskapsregister MEDL</dt>
-
-    <dt><b>-</b> Folkeregisteret</dt>
-
-    <dt><b>-</b> Arbeidstaker- og arbeidsgiverregisteret</dt>
-
-    <dt><b>-</b> Enhetsregisteret</dt>
-    {{#eq erTredjelandsborger "true"}}
-    <dt><b>-</b> Utlendingsdirektoratet </dt>
-    {{/eq}}
-    <dt><b>-</b> Søknaden om dagpenger, spørsmål om arbeid utenfor Norge</dt>
-    </div>
 </div>
 
 <div id="footer">
