--- a/templates/medlemskapresultater/partials/style.hbs
+++ b/templates/medlemskapresultater/partials/style.hbs
@@ -30,8 +30,8 @@
 
     p {
         margin-top: 3px;
-        margin-bottom: 3px;
-        font-size: 14px;
+        margin-bottom: 10px;
+        font-size: 16px;
         font-family: "Source Sans Pro";
     }
 
@@ -420,6 +420,15 @@
         margin-right: .5em;
     }
     mark {
+    }
+    br {
+        display: block; /* makes it have a width */
+        content: ""; /* clears default height */
+        margin-top: 0; /* change this to whatever height you want it */
+    }
+    .beskrivelse{
+        margin-top: 3px;
+        margin-bottom: 3px;
     }
 
 </style>
