små endringer i layout

--- a/templates/medlemskapresultater/partials/dagpenger_base.hbs
+++ b/templates/medlemskapresultater/partials/dagpenger_base.hbs
@@ -31,7 +31,7 @@
                     <p>
                         Navn : {{ navn }}
                     </p>
-                    <p>
+                    <p class="id">
                         Fødselsnummer : {{ insert_at fnr 6 }}
                     </p>
                     <p>Bruker er statsborger i {{statsborger}}</p>
