små endringer i layout

--- a/templates/medlemskapresultater/medlemskapuavklart.hbs
+++ b/templates/medlemskapresultater/medlemskapuavklart.hbs
@@ -1,4 +1,5 @@
 {{#> medlemskapresultater/partials/dagpenger_base }}
     {{#*inline "doctitle"}}Det er uavklart om bruker er medlem folketrygden. Automatisk vurdering gjort i forbindelse med krav om Dagpenger  for perioden {{ fom }} - {{ tom }} {{/inline}}
-    {{#*inline "title"}} NAV-internt dokument{{/inline}}
+    {{#*inline "title"}}<p><i>Dette er et NAV-internt dokument, jf. forvaltningsloven § 18a første ledd første setning</i></p>
+    <p><i>Notatet er opprettet automatisk av systemet LovMe relatert til søknad om {{ytelse}}.</i></p>{{/inline}}
 {{/medlemskapresultater/partials/dagpenger_base}}
