små endringer i layout

--- a/templates/medlemskapresultater/partials/dagpenger_base.hbs
+++ b/templates/medlemskapresultater/partials/dagpenger_base.hbs
@@ -39,11 +39,11 @@
             </div>
         </div>
     </div>
-    <p><h3>Til saksbehandler</h3></p>
+    <p><b>Til saksbehandler</b></p>
 
     {{#each årsaker}}
         <br/>
-    <b>{{ begrunnelse }}</b>
+    <h3>{{ begrunnelse }}</h3>
         <br/><div class="beskrivelse">{{{ beskrivelse }}}</div><br/>
 
     {{/each}}
