--- a/templates/medlemskapresultater/partials/nei_base.hbs
+++ b/templates/medlemskapresultater/partials/nei_base.hbs
@@ -41,13 +41,13 @@
     <p>
         <br/>
         <br/>
-        <b>Du er ikke medlem i folketrygden i perioden {{ MEDLfom }} - {{MEDLtom}}.</b>
+        <b>Du er ikke medlem i folketrygden i perioden {{ medlfom }} - {{medltom}}.</b>
     </p>
     <p>
         Medlemskapet er automatisk vurdert.
         <br/>
         Resultatet av vurderingen er at du er omfattet av trygdelovgivningen i {{lovvalgsland}}
-        og du er derfor ikke medlem i folketrygden i perioden {{MEDLfom}} - {{MEDLtom}}.
+        og du er derfor ikke medlem i folketrygden i perioden {{medlfom}} - {{medltom}}.
         <br/>
     </p>
     <div>
