retter på case sensitive felter

--- a/templates/medlemskapresultater/partials/nei_base.hbs
+++ b/templates/medlemskapresultater/partials/nei_base.hbs
@@ -41,7 +41,7 @@
     <p>
         <br/>
         <br/>
-        <b>Du er ikke medlem i folketrygden i perioden {{ MEDLfom }} - {{MEDLtom}}.</b>
+        <b>Du er ikke medlem i folketrygden i perioden {{ medlfom }} - {{medltom}}.</b>
     </p>
     <p>
         Medlemskapet er automatisk vurdert.
