endrer på setning om medl i nei notat

--- a/templates/medlemskapresultater/partials/base.hbs
+++ b/templates/medlemskapresultater/partials/base.hbs
@@ -42,7 +42,7 @@
     <div id="oppsummering" class="oppsummering">
     <dl>Den automatiske vurderingen er basert på opplysninger om deg fra:</dl>
 
-    <dt><b>-</b> NAVs medlemskapsregister MEDL</dt>
+    <dt><b>-</b> Utenlandske trygdemyndigheter (NAVs medlemskapsregister MEDL)</dt>
 
     <dt><b>-</b> Folkeregisteret</dt>
 
