endrer på setning om medl i nei notat

--- a/templates/medlemskapresultater/partials/nei_base.hbs
+++ b/templates/medlemskapresultater/partials/nei_base.hbs
@@ -53,7 +53,7 @@
     <div>
         Den automatiske vurderingen er basert på opplysninger om deg fra:
         <ul>
-            <li> Utenlandske trygdemyndigheter</li>
+            <li> Utenlandske trygdemyndigheter (NAVs medlemskapsregister MEDL)</li>
             <li> Folkeregisteret</li>
             <li> Arbeidstaker- og arbeidsgiverregisteret</li>
             <li> Enhetsregisteret</li>
