--- a/templates/medlemskapresultater/medlemskapnei.hbs
+++ b/templates/medlemskapresultater/medlemskapnei.hbs
@@ -1,4 +1,4 @@
 {{#> medlemskapresultater/partials/nei_base }}
-    {{#*inline "doctitle"}}Automatisk vurdering - Ikke medlem i folketrygden{{/inline}}
+    {{#*inline "doctitle"}}Automatisk vurdering - Ikke medlem i folketrygden per {{ fom }}{{/inline}}
     {{#*inline "title"}} Notatet er opprettet automatisk av systemet LovMe relatert til søknad om {{ ytelse }} for perioden {{ fom }} - {{ tom }} {{/inline}}
 {{/medlemskapresultater/partials/nei_base}}
