--- a/templates/medlemskapresultater/partials/style.hbs
+++ b/templates/medlemskapresultater/partials/style.hbs
@@ -117,12 +117,8 @@
         margin-bottom: 5px;
     }
 
-    .title {
-        display: inline-block;
-        top: 14px;
-        left: 100px;
-        font-family: "Source Sans Pro";
-        font-size: 16px;
+    .title-style {
+
     }
 
     .navlogo {
