--- a/templates/medlemskapresultater/partials/style.hbs
+++ b/templates/medlemskapresultater/partials/style.hbs
@@ -28,6 +28,13 @@
         font-family: "Source Sans Pro";
     }
 
+    p.automatisk-vurdering {
+        margin-top: 3px;
+        margin-bottom: 10px;
+        font-size: 12px;
+        font-family: "Source Sans Pro";
+    }
+
     p {
         margin-top: 3px;
         margin-bottom: 10px;
@@ -140,12 +147,16 @@
     }
 
     .navn {
-        font-weight: bold;
-        font-size: 16px;
+        font-size: 12px;
         width: 350px;
     }
 
+    ul.a {
+        list-style-type: circle;
+    }
+
     .id {
+        font-size:12px;
         width: 430px;
         margin-bottom: 0px;
     }
