--- a/templates/medlemskapresultater/partials/base.hbs
+++ b/templates/medlemskapresultater/partials/base.hbs
@@ -40,7 +40,8 @@
     <p>
     <h3>Du er medlem i folketrygden pr. {{ fom }}.</h3></p>
     <p class="automatisk-vurdering">
-        Vurderingen av medlemskapet ditt er behandlet automatisk, og vurderingen er basert på opplysninger om deg fra:</p>
+        Vurderingen av medlemskapet ditt er behandlet automatisk, og vurderingen er basert på opplysninger om deg
+        fra:</p>
     <div id="oppsummering" class="oppsummering">
         <ul>
             <li>Utenlandske trygdemyndigheter (NAVs medlemskapsregister MEDL)</li>
@@ -53,25 +54,22 @@
             {{#eq erTredjelandsborger "true"}}
                 <li>Utlendingsdirektoratet</li>
             {{/eq}}
-        </ul>
-        <dt>
-            <ul>
-                <li>Søknaden om sykepenger og spørsmål om:</li>
-                <ul class="a">
-                    {{#eq brukerSpørsmålArbeidUtlandNy "false"}} <!-- gammel brukerspørsmål -->
-                        <li>Arbeid utenfor Norge</li>{{/eq}}
-                    {{#eq brukerSpørsmålArbeidUtlandNy "true"}}
-                        <li>Arbeid utenfor Norge</li>{{/eq}}
-                    {{#eq brukerSpørsmålOppholdUtenforEØS "true"}}
-                        <li>Opphold utenfor EØS-området</li>{{/eq}}
-                    {{#eq brukerSpørsmålOppholdUtenforNorge "true"}}
-                        <li>Opphold utenfor Norge</li>{{/eq}}
-                    {{#eq brukerSpørsmålOppholdstillatelse "true"}}
-                        <li>Oppholdstillatelse</li>{{/eq}}
-                </ul>
+            <li>Søknaden om sykepenger og spørsmål om:</li>
+            <ul class="a">
+                {{#eq brukerSpørsmålArbeidUtlandNy "false"}} <!-- gammel brukerspørsmål -->
+                    <li>Arbeid utenfor Norge</li>{{/eq}}
+                {{#eq brukerSpørsmålArbeidUtlandNy "true"}}
+                    <li>Arbeid utenfor Norge</li>{{/eq}}
+                {{#eq brukerSpørsmålOppholdUtenforEØS "true"}}
+                    <li>Opphold utenfor EØS-området</li>{{/eq}}
+                {{#eq brukerSpørsmålOppholdUtenforNorge "true"}}
+                    <li>Opphold utenfor Norge</li>{{/eq}}
+                {{#eq brukerSpørsmålOppholdstillatelse "true"}}
+                    <li>Oppholdstillatelse</li>{{/eq}}
             </ul>
-        </dt>
-        Vurderingen forutsetter:
+        </ul>
+        <p>
+            Vurderingen forutsetter:
         <ul>
             <li>at du ikke har utført noe arbeid utenfor Norge de siste 12 månedene</li>
 
@@ -88,6 +86,7 @@
                 <li> at du ikke er ansatt for en fremmed stat eller en mellomfolkelig organisasjon</li>
             {{/eq}}
         </ul>
+        </p>
     </div>
 </div>
 
