Oppdatert ja-notat

--- a/templates/medlemskapresultater/medlemskapvurdert.hbs
+++ b/templates/medlemskapresultater/medlemskapvurdert.hbs
@@ -1,7 +1,3 @@
 {{#> medlemskapresultater/partials/base }} {{#*inline "doctitle"}}
     Bruker er medlem i folketrygden. Automatisk vurdering gjort i forbindelse med krav om sykepenger for perioden {{ fom }} - {{ tom }}
-{{/inline}}
-{{#*inline "title"}}
-    <div style="font-style:italic; font-size: 18px; font-weight: bold; text-align: left;"> Notat opprettet automatisk
-        {{ opprettet }} </div> {{/inline}}
-{{/medlemskapresultater/partials/base}}
+{{/inline}}{{/medlemskapresultater/partials/base}}
