--- a/templates/medlemskapresultater/partials/base.hbs
+++ b/templates/medlemskapresultater/partials/base.hbs
@@ -14,12 +14,6 @@
         offentleglova § 13 første ledd<br/>
 
         og NAV-loven § 7 </p>
-    <div class="header">
-        <h1 class="heading">
-            <div>{{> title }}</div>
-            <div>Gjelder søknad om sykepenger {{ fom }} - {{ tom }}</div>
-        </h1>
-    </div>
 </div>
 <div class="container">
     <div class="personinfo">
@@ -86,6 +80,8 @@
                 <li> at du ikke er ansatt for en fremmed stat eller en mellomfolkelig organisasjon</li>
             {{/eq}}
         </ul>
+        <div class="opprettet-automatisk">Notatet er opprettet automatisk i forbindelse med søknad om sykepenger for perioden {{ fom }} - {{ tom }}</div>
+        <div class="opprettet-automatisk">Vurderingen er gjort av Arbeids- og velferdsdirektoratets system for automatisk vurdering av lovvalg og medlemskap (systemet “medlemskap-oppslag”).</div>
         </p>
     </div>
 </div>
