--- a/templates/medlemskapresultater/partials/style.hbs
+++ b/templates/medlemskapresultater/partials/style.hbs
@@ -17,6 +17,15 @@
         }
     }
 
+    .opprettet-automatisk {
+        margin-top: 3px;
+        margin-bottom: 10px;
+        font-style: italic;
+        font-weight: bold;
+        font-size: 12px;
+        font-family: "Source Sans Pro";
+    }
+
     * {
         font-family: "Source Sans Pro";
     }
