Oppdatert ja-notat

--- a/templates/medlemskapresultater/partials/base.hbs
+++ b/templates/medlemskapresultater/partials/base.hbs
@@ -13,7 +13,7 @@
 
         offentleglova § 13 første ledd<br/>
 
-        og NAV-loven § 7 </p>
+        og Nav-loven § 7 </p>
 </div>
 <div class="container">
     <div class="personinfo">
@@ -38,7 +38,7 @@
         fra:</p>
     <div id="oppsummering" class="oppsummering">
         <ul>
-            <li>Utenlandske trygdemyndigheter (NAVs medlemskapsregister MEDL)</li>
+            <li>Utenlandske trygdemyndigheter (Navs medlemskapsregister MEDL)</li>
 
             <li>Folkeregisteret</li>
 
@@ -67,7 +67,7 @@
         <ul>
             <li>at du ikke har utført noe arbeid utenfor Norge de siste 12 månedene</li>
 
-            <li>at du ikke oppholder deg i utlandet uten NAV sin godkjenning når det er nødvendig, se
+            <li>at du ikke oppholder deg i utlandet uten Nav sin godkjenning når det er nødvendig, se
                 folketrygdloven § 8-9 andre ledd
             </li>
 
