småjusteringer av tekst og fikset linjeavstand på oppe høyre

--- a/templates/medlemskapresultater/partials/base.hbs
+++ b/templates/medlemskapresultater/partials/base.hbs
@@ -10,9 +10,7 @@
 <div class="container">
     <div id="header"><img class="navlogo" src="{{ image "Navlogo.png" }}"/></div>
     <p class="p3">Unntatt offentlighet etter<br/>
-
         offentleglova § 13 første ledd<br/>
-
         og Nav-loven § 7 </p>
 </div>
 <div class="container">
@@ -20,7 +18,7 @@
         <div class="persontekst">
             <div class="persontekst__sidetopp">
                 <div class="persontekst__personalia">
-                    <b class="personalia_heading">Personopplysninger</b>
+                    <p class="personalia_heading">Personopplysninger</p>
                     <p class="navn">
                         Navn: {{ navn }}
                     </p>
@@ -38,7 +36,7 @@
         fra:</p>
     <div id="oppsummering" class="oppsummering">
         <ul>
-            <li>Utenlandske trygdemyndigheter (Navs medlemskapsregister MEDL)</li>
+            <li>Nav sitt medlemskapsregister MEDL</li>
 
             <li>Folkeregisteret</li>
 
@@ -81,7 +79,7 @@
             {{/eq}}
         </ul>
         <div class="opprettet-automatisk">Notatet er opprettet automatisk i forbindelse med søknad om sykepenger for perioden {{ fom }} - {{ tom }}</div>
-        <div class="opprettet-automatisk">Vurderingen er gjort av Arbeids- og velferdsdirektoratets system for automatisk vurdering av lovvalg og medlemskap (systemet “medlemskap-oppslag”).</div>
+        <div class="opprettet-automatisk">Vurderingen er gjort av Arbeids- og velferdsdirektoratets system for automatisk vurdering av lovvalg og medlemskap (systemet “LovMe”).</div>
         </p>
     </div>
 </div>
