--- a/templates/medlemskapresultater/partials/style.hbs
+++ b/templates/medlemskapresultater/partials/style.hbs
@@ -56,8 +56,8 @@
 
     .p3 {
         font-style: italic;
-        margin-top: -25px;
-        margin-bottom: 40px;
+        line-height: 10px;
+        margin: 0;
         text-align: right;
     }
 
@@ -82,8 +82,6 @@
 
         }
     .personalia_heading{
-        font-weight: 700;
-        font-style: bold;
         font-size: 14px;
         font-family: "Source Sans Pro";
     }
