--- a/templates/medlemskapresultater/partials/style.hbs
+++ b/templates/medlemskapresultater/partials/style.hbs
@@ -82,7 +82,8 @@
 
         }
     .personalia_heading{
-        font-size: 14px;
+        font-size: 12px;
+        font-weight: bold;
         font-family: "Source Sans Pro";
     }
 
