liten korrigering av nei notat

--- a/templates/medlemskapresultater/partials/nei_base.hbs
+++ b/templates/medlemskapresultater/partials/nei_base.hbs
@@ -30,7 +30,7 @@
         </div>
     </div>
     <p>
-    <h3>Du er ikke medlem i folketrygden pr. {{ fom }} - {{tom}}.</h3></p>
+    <h3>Du er ikke medlem i folketrygden i perioden {{ fom }} - {{tom}}.</h3></p>
     <p class="automatisk-vurdering">
         Resultatet av vurderingen er at du er omfattet av trygdelovgivningen i {{lovvalgsland}} og du er derfor ikke medlem i folketrygden i perioden {{medlfom}} - {{medltom}}.<br/>
         Vurderingen er basert på opplysninger om deg fra:
